kubernetes/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: p2f-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2f-api-deployment
  template:
    metadata:
      labels:
        app: p2f-api-deployment
    spec:
      containers:
        - name: p2f-api-deployment
          image: 'ghcr.io/past-to-future-eu-horizon/p2f_api:latest'
          ports:
            - containerPort: 8084
          imagePullPolicy: Always
          volumeMounts:
            - name: email-volume
              mountPath: /p2f/emails
      restartPolicy: Always
      volumes:
        - name: email-volume
          persistentVolumeClaim:
            claimName: emails-pvc
  strategy:
    type: RollingUpdate
