kubernetes/database-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: p2f-pg-pod
spec:
  # initContainers:
  #   - name: set-permissions
  #     image: busybox:latest
  #     securityContext:
  #       runAsUser: 0
  #       runAsGroup: 0
  #     volumeMounts: 
  #       - name: p2f-pg-mount
  #         mountPath: /db
  #     command: ["chown", "-Rh", "100936000", "/db"]
    
  securityContext:
    runAsUser:  1001292450
    runAsGroup: 1001292450
  containers:
  - name: p2f-pg-pod
    image: postgres:18
    ports:
    - containerPort: 5432
    volumeMounts:
      - name: p2f-pg-mount
        mountPath: /var/lib/postgresql
  volumes: 
    - name: p2f-pg-mount
      persistentVolumeClaim:
        claimName: p2f-pg-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: p2f-pg-svc
spec:
  selector:
    app: p2f-pg-pod
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
