kubernetes/database-pod2.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: p2f-pg-temp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2f-pg-temp
  template:
    metadata:
      labels:
        app: p2f-pg-temp
    spec:
      containers:
        - name: container
          image: 'docker.io/library/postgres:18'
          ports:
            - containerPort: 5432
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  strategy:
    type: RollingUpdate
---
apiVersion: v1
kind: Service
metadata:
  name: p2f-tempdb-service
spec:
  selector:
    app: p2f-pg-temp
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
